# ProbabilityTheoryModeling

./: .gitignore  README.md
.github/workflows/: ci_tests.yml
lib/distributions/: BernoulliDistribution.cpp  BernoulliDistribution.hpp  BinomialDistribution.cpp  BinomialDistribution.hpp  CMakeLists.txt  CauchyDistribution.cpp  CauchyDistribution.hpp  DistributionExperiment.cpp  DistributionExperiment.hpp  ExponentialDistribution.cpp  ExponentialDistribution.hpp  GeometricDistribution.cpp  GeometricDistribution.hpp  LaplaceDistribution.cpp  LaplaceDistribution.hpp  NormalDistribution.cpp  NormalDistribution.hpp  PoissonDistribution.cpp  PoissonDistribution.hpp  UniformDistribution.cpp
lib/law-of-large-numbers/: CMakeLists.txt  LawOfLargeNumbersSimulator.cpp  LawOfLargeNumbersSimulator.hpp
lib/markov-chain/: CMakeLists.txt  MarkovChain.cpp  MarkovChain.hpp  MarkovTextModel.cpp  MarkovTextModel.hpp
lib/sigma-algebra/: DiscreteRandomVariable.cpp  DiscreteRandomVariable.hpp  Event.cpp  OutcomeSpace.cpp  ProbabilityMeasure.cpp  SigmaAlgebra.cpp
tests/: CMakeLists.txt  distributions_tests.cpp  markov_chain_tests.cpp  sigma_algebra_tests.cpp  war_and_peace.txt
